--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"smallGuDuのblog",
+    "subTitle":"其实是日常网站啦",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/158005463?v=4",
     "GMEEK_VERSION":"last"
 }
